Fix word-wrapping once and for all

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -99,6 +99,7 @@ body {
 	font-family: 'Museo Sans', sans-serif;
 	color: @white;
 	font-size: 16px;
+	word-wrap: break;
 }
 
 h1, h2, h3 {
